2010-05-27 Sebastien Pouliot  <sebastien@ximian.com>

	* plugin.cpp: Once download is complete check the policy on the 
	final URI (not the original one) to cover cases where redirection
	was used

2010-05-26  Sebastien Pouliot  <sebastien@ximian.com>

	* plugin-class.cpp: Cover special case where OnLoad is emmitted for 
	xdomain apps, without a sender or data, if CrossDomainAccess.
	ScriptableOnly is specified and if EnabledHtmlAccess == true

2010-05-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.cpp: Re-add a check for not allowing downloaders to be used for
	detached surfaces (our own test #381 / test-dead-downloaders.html).

2010-05-25  Andreia Gaita  <avidigal@novell.com>

	* plugin.cpp: remove reentrant hack for chrome, fixed upstream
	(see http://code.google.com/p/chromium/issues/detail?id=32797)

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.mdp: Updated.

2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.mdp: Updated.

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp|h:
	* plugin-glue.cpp:
	* plugin-class.cpp:
	* npstream-request.cpp|h:
	* plugin-downloader.cpp|h: Updated to the new HttpRequest API.

	* Makefile.am:
	* curl/*: Moved curl bridge source code into libmoon.

	* browser-bridge.h: Update to the new HttpRequest API.

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-entry.cpp: Spew all js exceptions thrown when in debug mode.

2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: Fix FIXME by reffing self during a timeout.

2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-proxy.cpp: Fix compiler warning.

2010-05-12  Chris Toshok  <toshok@ximian.com>

	* plugin-proxy.cpp (load): we don't need the libmoon.so.0 part
	since we don't install the System.Windows.dll.config file into the
	plugin directory anymore.

2010-05-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>
