@@ -1,3 +1,8 @@
+2010-05-28  Jeffrey Stedfast  <fejj@novell.com>
+
+	* plugin-class.cpp (MoonlightMultiScaleImageObject::Invoke): Fixed
+	to properly handle integer args for ZoomAboutLogicalPoint().
+
 2010-05-27 Sebastien Pouliot  <sebastien@ximian.com>
 
 	* plugin.cpp: Once download is complete check the policy on the 
